<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">meijia</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buttom_home">首页</string>
    <string name="buttom_wall">订单</string>
    <string name="buttom_camera">我的</string>
    <string name="buttom_message">更多</string>
    <string name="login_title">美甲</string>
    <string name="local">深圳市</string>
    <string name="login_title1">选择城市</string>
    <string name="login_title2">GPS定位城市</string>
    <string name="login_title3">正在定位城市...</string>
    <string name="login_title4">已开通服务城市</string>
    <string name="b1">北京市</string>
    <string name="b2">上海市</string>
    <string name="b3">深圳市</string>
    <string name="b4">杭州市</string>
    <string name="b5">成都市</string>
    <string name="zuopin">作品</string>
    <string name="shouyiren">手艺人</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="r1">面部美白</string>
    <string name="r2">面部补水</string>
    <string name="r3">身体按摩</string>
    <string name="r4">全网最低价49元专区</string>
    <string name="order">我的订单</string>
    <string name="mycenter">个人中心</string>
    <string name="more">更多</string>
    <string name="item1">接收通知</string>
    <string name="item2">招聘手艺人</string>
    <string name="item3">服务范围</string>
    <string name="item4">用户反馈</string>
    <string name="item5">关于我们</string>

</resources>
