<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:layout_height="match_parent" >
    <RelativeLayout
        android:id="@+id/re_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/loginhead"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_centerInParent="true"
            android:background="@drawable/skinpic_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            />



    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:text="@string/item1"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:paddingTop="5dp"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:drawableRight="@drawable/right_arrow_black"
            android:paddingLeft="10dp"
            android:text="@string/item2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingTop="5dp"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:drawableRight="@drawable/right_arrow_black"
            android:paddingLeft="10dp"
            android:text="@string/item3"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/gray">
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
       android:layout_marginLeft="10dp"

        android:background="@color/black"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingTop="5dp"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:drawableRight="@drawable/right_arrow_black"
            android:paddingLeft="10dp"
            android:text="@string/item4"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/gray">
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"

            android:background="@color/black"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingTop="5dp"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:drawableRight="@drawable/right_arrow_black"
            android:paddingLeft="10dp"
            android:text="@string/item5"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/gray">
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"

            android:background="@color/black"
            />
    </LinearLayout>

</LinearLayout>