<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="example.mejia.ui.ItemMain">

    <RelativeLayout
        android:id="@+id/re_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/loginhead"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_centerInParent="true"
            android:background="@drawable/skinpic_blue" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="true"
            android:paddingLeft="15dp"
            android:id="@+id/mIVIMback"
            android:src="@drawable/back"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zuopin"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="5dp"
                android:id="@+id/mTvImWen" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shouyiren"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="5dp"

                android:id="@+id/mTvImPeo" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:paddingRight="15dp"
            android:id="@+id/mIVIMsearch"
            android:src="@drawable/search"
            />

    </RelativeLayout>


    <github.chenupt.dragtoplayout.DragTopLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorPrimary"
        android:id="@+id/drag_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!--top view-->
        <LinearLayout
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="vertical">
           <LinearLayout
               android:layout_width="fill_parent"
               android:orientation="horizontal"
               android:paddingLeft="5dp"
               android:paddingRight="5dp"
               android:paddingTop="15dp"
               android:layout_height="wrap_content">
               <Button
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:background="@drawable/round"
                   android:padding="5dp"
                   android:gravity="center"
                   android:textColor="@color/black"
                   android:id="@+id/mBtIM1"
                   android:layout_height="wrap_content"
                   android:text="@string/r1"/>
               <Button
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:background="@drawable/round"
                   android:padding="5dp"
                   android:gravity="center"
                   android:textColor="@color/black"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:layout_height="wrap_content"
                   android:text="@string/r2"/>
               <Button
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:background="@drawable/round"
                   android:padding="5dp"
                   android:gravity="center"
                   android:textColor="@color/black"

                   android:layout_height="wrap_content"
                   android:text="@string/r3"/>
               </LinearLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content">

                <Button
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:background="@drawable/round"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/r4"/>
            </RelativeLayout>

        </LinearLayout>

        <!--content view-->
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/drag_content_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.astuetz.PagerSlidingTabStrip
                android:id="@+id/tabs"
                app:pstsShouldExpand="true"
                app:pstsIndicatorColor="@color/white"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/black"
                android:fillViewport="false" />
            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v4.view.ViewPager>

        </LinearLayout>

    </github.chenupt.dragtoplayout.DragTopLayout>

</LinearLayout>